:sparkles: Cleaning sonar issues