@@ -6,7 +6,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PrincipalUser implements UserDetails {
     private Long idUser;
@@ -27,8 +26,8 @@ public class PrincipalUser implements UserDetails {
     }
 
     public static PrincipalUser build(UserEntity usuario, List<RoleEntity> roles) {
-        List<GrantedAuthority> authorities = roles.stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getName())).collect(Collectors.toList());
+        List<SimpleGrantedAuthority> authorities = roles.stream()
+                .map(rol -> new SimpleGrantedAuthority(rol.getName())).toList();
         return new PrincipalUser(usuario.getId(),usuario.getName(), usuario.getDniNumber(), usuario.getMail(),
                 usuario.getPassword(), authorities);
     }
